[package]
name = "spawner_tests"
version = "0.0.0"
authors = ["ptslog <hsfk@yandex.ru>"]

[lib]
path = "lib.rs"
crate-type = ["lib"]

[[bin]]
name = "alloc"
path = "bin/alloc.rs"

[[bin]]
name = "loop"
path = "bin/loop.rs"

[[bin]]
name = "file_writer"
path = "bin/file_writer.rs"

[[bin]]
name = "stdout_writer"
path = "bin/stdout_writer.rs"

[[bin]]
name = "stdin_to_stdout"
path = "bin/stdin_to_stdout.rs"

[[bin]]
name = "two_proc"
path = "bin/two_proc.rs"

[[bin]]
name = "sleep"
path = "bin/sleep.rs"

[[bin]]
name = "env_printer"
path = "bin/env_printer.rs"

[[bin]]
name = "abnormal_exit"
path = "bin/abnormal_exit.rs"

[[bin]]
name = "consumer"
path = "bin/consumer.rs"

[dependencies]
rand = "0.6.5"
spawner = { path = "../libspawner" }