[package]
name = "spawner"
version = "0.0.3"
authors = ["ptslog <hsfk@yandex.ru>"]

[lib]
name = "spawner"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
cfg-if = "0.1.6"
backtrace = "0.3.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "processthreadsapi",
    "winbase",
    "winnt",
    "minwindef",
    "handleapi",
    "winuser",
    "jobapi2",
    "namedpipeapi",
    "fileapi",
    "userenv",
    "errhandlingapi",
    "securitybaseapi",] }