[package]
name = "spawner"
version = "0.0.4"
authors = ["ptslog <hsfk@yandex.ru>"]

[lib]
name = "spawner"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
cfg-if = "0.1.6"
backtrace = "0.3.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "processthreadsapi",
    "winbase",
    "winnt",
    "minwindef",
    "handleapi",
    "winuser",
    "jobapi2",
    "namedpipeapi",
    "fileapi",
    "userenv",
    "errhandlingapi",
    "securitybaseapi",
    "ioapiset",
    "ws2def",
    "winerror", ] }

[target.'cfg(unix)'.dependencies]
cgroups-fs = "1.0.1"
nix = "0.12.0"
rand = "0.6.5"
procfs = "0.5.2"