[package]
name = "spawner"
version = "0.1.0"
authors = ["ptslog <hsfk@yandex.ru>"]

[lib]
name = "spawner"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
cfg-if = "0.1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "processthreadsapi",
    "winbase",
    "winnt",
    "minwindef",
    "handleapi",
    "winuser",
    "jobapi2",
    "namedpipeapi",
    "fileapi",
    "userenv",
    "errhandlingapi",
    "securitybaseapi",
    "ioapiset",
    "ws2def",
    "winerror", ] }

[target.'cfg(unix)'.dependencies]
cgroups-fs = "1.1.2"
nix = "*"
rand = "0.7.3"
procfs = "0.9.1"