[package]
name = "spawner_tests"
version = "0.0.0"
authors = ["ptslog <hsfk@yandex.ru>"]
publish = false

[dependencies]
cfg-if = "0.1.6"

[dev-dependencies]
rand = "0.6.5"
spawner = { path = "../spawner" }
spawner_driver = { path = "../spawner_driver" }

[lib]
path = "lib.rs"
crate-type = ["lib"]

[[bin]]
name = "app"
path = "app.rs"
